--- a/site pour École/css/style.css
+++ b/site pour École/css/style.css
@@ -39,9 +39,9 @@ section {
   padding: 3rem 5%;
 }
 
-section:nth-child(even) {
+/* section:nth-child(even) {
   background: #f6f6f6;
-}
+} */
 
 .heading {
   text-align: center;
